istio/traffic-management/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: ingress
spec:
  rules:
  - host: "app.example.com"
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
      
  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name app.example.com
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: tls.sample
    hosts:
      - app.example.com
