istio/traffic-management/k8s-istio-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
        subset: v1 #sesuai name pada destinationrule
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-svc
spec:
  hosts:
  - backend-svc
  http:
  - route:
    - destination:
        host: backend-svc
        subset: v1 #sesuai name pada destinationrule
      weight: 50
    - destination:
        host: backend-svc #service
        subset: v2
      weight: 50
---
